Fixed help page and update readme

--- a/EDPSymbologyConvertConsoleApp/Properties/launchSettings.json
+++ b/EDPSymbologyConvertConsoleApp/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "EDPSymbologyConvertConsoleApp": {
-      "commandName": "Project",
-      "commandLineArgs": " --universe IBM.N,037833100,TH0001010014 -o csvoutputIBM.csv --verbose"
+      "commandName": "Project"
     }
   }
 }
