--- a/EDPSymbologyConvertConsoleApp/Properties/launchSettings.json
+++ b/EDPSymbologyConvertConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EDPSymbologyConvertConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": "-i IBM.N,JPY=,VOD.L"
+      "commandLineArgs": "--help"
     }
   }
 }
