--- a/EDPSymbologyConvertConsoleApp/EDPSymbologyConvertConsoleApp.csproj
+++ b/EDPSymbologyConvertConsoleApp/EDPSymbologyConvertConsoleApp.csproj
@@ -14,7 +14,7 @@
 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
   <DebugType>portable</DebugType>
   <DebugSymbols>true</DebugSymbols>
-  <Optimize>false</Optimize>
+  <Optimize>true</Optimize>
 </PropertyGroup>
 
   <ItemGroup>
