--- a/EDPSymbologyConvertConsoleApp/Properties/launchSettings.json
+++ b/EDPSymbologyConvertConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EDPSymbologyConvertConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": " --help"
+      "commandLineArgs": " --universe IBM.N --proxy 10.23.31.131:8080"
     }
   }
 }
